--- a/themes/hugo-blog-awesome/layouts/partials/browserconfig.html
+++ b/themes/hugo-blog-awesome/layouts/partials/browserconfig.html
@@ -1,2 +1,2 @@
-<meta name="msapplication-config" content="{{ (resources.Get 'icons/browserconfig.xml' | resources.ExecuteAsTemplate 'browserconfig.xml' $ctx).RelPermalink }}">
+<meta name="msapplication-config" content="{{ (resources.Get "icons/browserconfig.xml" | resources.ExecuteAsTemplate "browserconfig.xml" $ctx).RelPermalink }}">
 <meta name="msapplication-TileColor" content="{{ $ctx.TileColor }}">
